# market_research

./: .gitignore  CLAUDE.md  justfile  main.py  pyproject.toml  report.md  test_yahoo_news_scraper.ipynb
knowledge/: user_preference.txt
src/market_research/: crew.py  main.py
src/market_research/config/: agents.yaml  tasks.yaml
src/market_research/tools/: yahoo_news_scraper.py
src/market_research/utils/: funcs.py
