[project]
name = "market_research"
version = "0.1.0"
description = "market_research using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
    "playwright>=1.40.0",
    "click>=8.0.0"
]

[project.scripts]
market_research = "market_research.main:cli"
run_crew = "market_research.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "nest-asyncio>=1.6.0",
    "ruff>=0.12.8",
]
local = []

[tool.crewai]
type = "crew"
